--- a/src/components/loading/loading.component.scss
+++ b/src/components/loading/loading.component.scss
@@ -45,7 +45,7 @@
         }
 
         &--1 {
-            left: 55px;
+            left: 56px;
             transform: rotate(-12deg);
             top: 19px;
             height: 86px;
@@ -57,7 +57,7 @@
         }
 
         &--2 {
-            left: 47px;
+            left: 48px;
             transform: rotate(116deg);
             top: 72px;
             height: 40px;
@@ -69,7 +69,7 @@
         }
 
         &--3 {
-            left: 57px;
+            left: 58px;
             transform: rotate(228deg);
             top: 25px;
             height: 74px;
@@ -81,7 +81,7 @@
         }
 
         &--4 {
-            left: 50px;
+            left: 51px;
             transform: rotate(114deg);
             height: 72px;
             top: -10px;
