--- a/src/components/work-project/work-project.component.scss
+++ b/src/components/work-project/work-project.component.scss
@@ -79,7 +79,8 @@
                 font-weight: 500;
                 color: var(--dark-orange);
                 display: table;
-                margin: 0 auto;
+                margin: 8px auto 0;
+                text-align: center;
             }
         }
 
